--- a/index.html
+++ b/index.html
@@ -76,20 +76,21 @@
 	<section class="container-fluid">
 			<div class="row">
 				<div class="col-12 col-md-6">
-					<h2 class="h1">Creative Team</h2>
-							<h3 style="color: orange">Collective Experiences Matter</h3>
+					<h2 class="h1">Our Team</h2>
+							<h3 style="color: orange">Collective Experience Matter</h3>
+							<p>A senior team with a modern creative mindset, business and content wise.</p>
 				</div>
 				<div class="clearfix"></div>
 			</div>
 			<div class="row"><div class="minimove col-lg-4 project-item">
 					<div class="proj-category tag"></div>
-					<div class="proj-info">Monir Eriksson<br>Content Creator & Author</div>
+					<div class="proj-info">Monir Eriksson &nbsp;<span class="footer">Founder, Creative Director</span><br><a href="mailto:monir@pdgmg.com">monir@pdgmg.com</a></div>
 					<div class="img-container" style="background-image: url('assets/images/monir.jpg');"><img src="assets/img/list-placeholder.png"
 						 class="img-fluid" alt=""></div>
 						 <p class="footer"><br>Over 18 years experience in content creation and productions from Endemol Shine, Warner Bros and founder of IFG/GZE that recently created Worlds first global interactive e-sport reality series. An Innovator with a track record in creating products and services beyond the ordinary.</p>
 					</div><div class="minimove col-lg-4 project-item">
 					<div class="proj-category tag"></div>
-					<div class="proj-info">Jürgen Buchmann<br>Content Creator & Author</div>
+					<div class="proj-info">Jürgen Buchmann &nbsp;<span class="footer">Co-founder, Business Development</span><br><a href="mailto:jurgen@pdgmg.com">jurgen@pdgmg.com</a></div>
 					<div class="img-container" style="background-image: url('assets/images/jb.jpg');"><img src="assets/img/list-placeholder.png"
 						 class="img-fluid" alt=""></div>
 						 <p class="footer"><br>Adding 20 years additional experience with several startups and more recently mastering Digital Transformation in various businesses, Jürgen have a long reportoar of founding forefront companies that creates innovate products while also re-shaping classic businesses with the use of new methodologies.</p>
@@ -98,14 +99,14 @@
 			<div class="row">
 					<div class="minimove col-lg-4 project-item">
 							<div class="proj-category tag"></div>
-							<div class="proj-info">Katarina Eriksson<br>Sales Director & Distribution</div>
-							<div class="img-container" style="background-image: url('assets/img/list-placeholder.png');"><img src="assets/img/list-placeholder.png"
+							<div class="proj-info">Katarina Eriksson &nbsp;<span class="footer">Sales Director</span><br><a href="mailto:katarina@pdgmg.com">katarina@pdgmg.com</a></div>
+							<div class="img-container" style="background-image: url('assets/images/katarina.jpg');"><img src="assets/img/list-placeholder.png"
 								 class="img-fluid" alt=""></div>
-								 <p class="footer"><br>Former Head of International Acquisitions at major network with +20 years experience.</p>
+								 <p class="footer"><br>Former Head of International Acquisitions at Kanal5 / Discovery Network Nordic with +20 years experience. Most recently worked with global sales at Lionsgate International.</p>
 							</div>
 							<div class="minimove col-lg-4 project-item">
 									<div class="proj-category tag"></div>
-									<div class="proj-info">Josefine Rosengren<br>Line Producer</div>
+									<div class="proj-info">Josefine Rosengren &nbsp;<span class="footer">Head of Partnerships</span><br><a href="mailto:josefine@labeldrinkers.com">josefine@labeldrinkers.com</a></div>
 									<div class="img-container" style="background-image: url('assets/images/josefine.jpg');"><img src="assets/img/list-placeholder.png"
 										 class="img-fluid" alt=""></div>
 										 <p class="footer"><br>More than 20 years experience with several productions from SONY Pictures, SVT, TV4, Viasat, ACNE Film to name a few.</p>
@@ -115,36 +116,38 @@
 	
 	<section class="container-fluid">
 		<div class="row" id="formats">
-			<div class="col-lg-6">
+			<div class="col-lg-8">
 				<h2 class="h1">Formats</h2>
 			</div>
 			<div class="clearfix"></div>
 		</div>
 		<div class="row">
-			<a href="labeldrinkers/" class="minimove col-lg-6 project-item">
-				<div class="proj-category tag faded">ENTERTAINMENT<br>[EDUTAINMENT]</div>
-				<div class="proj-info"><p>Label Drinkers</p>The gastronomical equivalent to "Top Gear"<p>Not yet another TV format</p><br>Label Drinkers is a cinematic gastronomy and beverage show that explores everything beyond food artsy and kitchen creations.</div>
+			<div class="minimove col-lg-6 project-item">
+				<div class="proj-category tag faded">ENTERTAINMENT, FACTUAL, EDU-TAINMENT<br>[UNSCRIPTED] - English</div>
+				<div class="proj-info"><p style="color: orange">Label Drinkers™</p>"The gastronomical equivalent to Top Gear"<p>Not yet another TV format</p></div>
 				<div class="video">
+					<a href="labeldrinkers/"><span class="red-label">Read more & watch trailer</span></a>
 					<video playsinline autoplay muted loop>
 					<source src="assets/videos/loops.mp4" type="video/mp4">
 						<param name="allowFullScreen" value="true"/>
 						<param name="allowscriptaccess" value="always"/>
 					</video>
+					<br><br>Label Drinkers is a cinematic gastronomy and beverage show that explores everything beyond food artsy and kitchen creations.<br><br>With a fusion of education and entertainment Label Drinkers will engage the audience in a tour de force around the globe with its exciting and humorous style on the quest to explore the world of famous beverages.
 				</div>
-			</a>
-	</div>
-	<div class="row">
-		<a href="labeldrinkers/" class="minimove col-lg-6 project-item">
-			<div class="proj-category tag faded">ENTERTAINMENT<br>[UNSCRIPTED REALITY]</div>
-			<div class="proj-info"><p>The Amusement Park</p>Taking the audience on a happy and fun show that also reveals tensions and excitement with thrilling moments.<p>A Reality show in a world of Excitements</p><br>The Amusement Park is a reality show where we follow the exiting elements that forms an amusepent park in a world of adrenaline pushing rides to the stress and conflicts behind the scenes during on stage performances also including the staff that's been around for ages and the juniors doing their first days of work not forgetting the visitors that comes from all over the world.</div>
-			<div class="video" style="display:none">
-				<video playsinline autoplay muted loop>
-				<source src="assets/videos/loops.mp4" type="video/mp4">
-					<param name="allowFullScreen" value="true"/>
-					<param name="allowscriptaccess" value="always"/>
-				</video>
 			</div>
-		</a>
+		<div class="minimove col-lg-6 project-item" style="display: none">
+			<div class="proj-category tag faded">ENTERTAINMENT, REALITY<br>[UNSCRIPTED] - Swedish</div>
+			<div class="proj-info"><p style="color: orange">The Amusement Park™</p>"Tensions and excitement with thrilling moments"<p>A really fun reality show</p></div>
+			<div class="video">
+					<span class="red-label">Coming soon</span>
+					<video playsinline autoplay muted loop>
+							<img src="assets/images/gronan.jpg">
+								<param name="allowFullScreen" value="true"/>
+								<param name="allowscriptaccess" value="always"/>
+							</video>
+							<br><br>The Amusement Park is a reality show where we follow the exiting elements that forms an amusepent park in a world of adrenaline pushing rides to the stress and conflicts behind the scenes during on stage performances also including the staff that's been around for ages and the juniors doing their first days of work not forgetting the visitors that comes from all over the world.
+			</div>
+		</div>
 </div>
 	</section>
 <a name="contact" id="contact"></a>
