--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -61,10 +61,9 @@
 			<div class="row">
 				<div class="col-md-3">
 					<ul>
-						<li class="faded">Unscripted</li>
+						<li class="faded">UNSCRIPTED</li>
 						<li>ENTERTAINMENT</li>
 						<li>FACTUAL</li>
-						<li class="faded">2019 -</li>
 					</ul>
 				</div>
 				<div class="col-md-3">
@@ -84,9 +83,9 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-8 col-md-8">
-					<p><img src="../assets/images/philip3.jpg" style="width: 400px;margin-right:50px;"><img src="../assets/images/ines3.jpg" style="width: 400px"></p>
+					<p><img src="../assets/images/philip3.jpg" class="photos"><img src="../assets/images/ines3.jpg" class="photos"></p>
 					<p>&nbsp;</p>
-					<p>Label Drinkers is a cinematic gastronomy and beverage show that explores everything beyond food artsy and kitchen creations.</p>
+					<p>Label Drinkers is a cinematic gastronomy and beverage show that explores everything <u>beyond</u> food artsy and kitchen creations.</p>
 					<p>Our hosts explore the global and eccentric consumption behaviours, the fascinating industry that supports it, and the variety of myths and legends surrounding a range of famous beverages.</p>
 					<p style="color: orange">A journey where they meet not only passionate experts but celebrities, winemakers, chefs and other characters, all with unique stories to tell.</p>				
 				</div>
@@ -94,7 +93,7 @@
 			<div class="row" style="display:none">
 				<div class="col-xs-8 col-md-8">			
 				<p style="color: orange">Label Drinkers fusion of education and entertainment brings the viewers on a journey where they will appreciate the best of both worlds.</p>
-				<p>Label Drinkers will engage the audience in a tour de force around the globe with it's exciting and humorous style on the quest to explore the world of Champagne. 
+				<p>Label Drinkers will engage the audience in a tour de force around the globe with it's exciting and humorous style on the quest to explore the world of champagne. 
 					Our hosts will expose untold stories and busting myths, challenged by the best experts in their field, creating unexpected, controversial and thrilling situations - meeting producers, personalities, stars and celebrities in legendary venues and locations around the globe.</p>
 
 				<p>Label Drinkers explore the ultimate Champagne experience in the travel-, hospitality- and gastronomical industry, while simultaneously covering historical revelations and trends that over centuries have cemented Champagne as the no.1 beverage of them all. </p>
@@ -120,13 +119,13 @@ Behind the cameras we have handpicked a team of sommelier world champions, decan
 			<div class="row" id="challenges">
 				<div class="col-lg-8">
 					<h2 class="h1">Dynamic elements</h2>
-					<video playsinline autoplay muted loop style="width: 90%;">
+					<video playsinline autoplay muted loop>
 							<source src="../assets/videos/timeline.mp4" type="video/mp4">
 							  <param name="allowFullScreen" value="false"/>
 							  <param name="allowscriptaccess" value="always"/>
 					</video>
 					<p>&nbsp;</p>
-<p>Challenges and events are introduced as valiant, gripping and brave add-ons to a traditional story telling. Each episode contains non-repeating element order that gives the audience a unique and dynamic experience for each episode.</p>
+<p>Challenges and events are introduced as gripping and brave add-ons to the traditional story telling. Each episode contains non-repeating element order that gives the audience a unique and dynamic experience for each episode.</p>
 
 <p>We follow our charismatic hosts vibrant yet contrasting views in the global hunt for unique locations, producer stories, amazing venues, high ranking restaurants and exclusive clubs that are highly regarded and associated with some of the most recognised prestige beverage brands in the world.</p>
 				</div>
@@ -137,8 +136,8 @@ Behind the cameras we have handpicked a team of sommelier world champions, decan
 			<div class="row" id="audience">
 				<div class="col-lg-8">
 					<h2 class="h1">Made for a global audience</h2>
-<p>The series will be in English with our focus on global reach also targeting global VOD distributors. We will take the audience on a dream like escapade revealing stories and facts from any culture around the globe; from the glamour of the rich and famous to the passionate hardworking producers with their daily challenges. 
-<p>Like the element where our host hunts down the worlds most expensive champagne. A journey that will take us from Formula One races to three-star restaurants chefs and sommeliers to the cellars of rare and hidden wine collections.</p>
+<p>With our global focus, the show will be in English and naturally also targeting global VOD distributors.</p><p>We will take the audience on a dream like escapade revealing stories and facts covering many cultures around the globe; following the glamour of the rich and famous to the untold stories by the producers and the people behind the creation processes. 
+<p>Like when our hosts are challenged to hunt down the worlds most expensive champagne - a journey that will take us from Formula One races to three-star restaurants with their chefs and sommeliers to the cellars of rare and hidden wine collections.</p>
 </div>
 				<div class="clearfix"></div>
 			</div>
@@ -147,7 +146,7 @@ Behind the cameras we have handpicked a team of sommelier world champions, decan
 			<div class="row" id="prodteam">
 				<div class="col-lg-8">
 					<h2 class="h1">Cinematic expression</h2>
-					<p>We have handpicked the production crew specifically for the cinematic expression we develop for the series.</p>
+					<p>We have handpicked the production crew specifically for the cinematic expression we develop for this series.</p>
 					<p>The crew we have brought together have extensive and collective experience from Endemol Shine, Warner Bros, SVT, SF, Sony pictures, Digital Domain, Technicolor, TV4-Group, Viasat to name a few.</p>
 				</div>
 				<div class="clearfix"></div>
@@ -157,7 +156,7 @@ Behind the cameras we have handpicked a team of sommelier world champions, decan
 			<div class="row" id="partners">
 				<div class="col-lg-8">
 					<h2 class="h1">Partners</h2>
-<p>Throughout the series we will visit a number of producers and brands. Since we like to engage and co-create our stories we invite you to become a partner, below are the first partners to the series.</p>
+<p>Throughout the series we will visit a number of producers and brands. Since we like to engage and co-create our stories we invite <u>you</u> to become a partner. Below you'll find our first couple of partners to the series.</p>
 <p>Get in contact with us to hear more about our innovative partnerships and how you can take part.</p>
 					<img src="../assets/images/carbon.png" style="width: 300px"><img src="../assets/images/legras.png" style="width: 300px"><img src="../assets/images/tattinger.png" style="width: 300px"><img src="../assets/images/diebolt.png" style="width: 300px"><img src="../assets/images/lancelot.png" style="width: 300px"><span style="width: 300px;padding-left: 50px;border:"><a href="mailto:info@pdgmg.com?subject=Partnership"><u>Partnerships available</u></a></span>
 </div>
