--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -26,7 +26,7 @@
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 				<link href="../assets/css/bootstrap.min-c=1524092400.css" media="all" rel="stylesheet" />
-				<link href="../assets/css/main-c=1524092400.css" media="all" rel="stylesheet" />
+				<link href="../assets/css/main.css" media="all" rel="stylesheet" />
 			</head>
 <body class="animated"><a name="top" id="top"></a>
 	<header>
