--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
 	<link href="assets/css/bootstrap.min-c=1524092400.css" media="all" rel="stylesheet" />
-	<link href="assets/css/main-c=1524092400.css" media="all" rel="stylesheet" />
+	<link href="assets/css/main.css" media="all" rel="stylesheet" />
 </head>
 
 <body><a name="top" id="top"></a>
