--- a/investors/index.html
+++ b/investors/index.html
@@ -20,7 +20,7 @@
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 				<link href="../assets/css/bootstrap.min-c=1524092400.css" media="all" rel="stylesheet" />
-				<link href="../assets/css/main-c=1524092400.css" media="all" rel="stylesheet" />
+				<link href="../assets/css/main.css" media="all" rel="stylesheet" />
 				<script>
 					if (typeof fuel == 'undefined') fuel = {}
 				</script>
