--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 							</div>
 							<div class="minimove col-lg-4 project-item">
 									<div class="proj-category tag"></div>
-									<div class="proj-info">Josefine Rosengren &nbsp;<span class="footer">Head of Partnerships</span><br><a href="mailto:josefine@labeldrinkers.com">josefine@labeldrinkers.com</a></div>
+									<div class="proj-info">Josefine Rosengren &nbsp;<span class="footer">Head of Partnerships</span><br><a href="mailto:josefine@pdgmg.com">josefine@pdgmg.com</a></div>
 									<div class="img-container" style="background-image: url('assets/images/josefine.jpg');"><img src="assets/img/list-placeholder.png"
 										 class="img-fluid" alt=""></div>
 										 <p class="footer"><br>More than 20 years experience with several productions from SONY Pictures, SVT, TV4, Viasat, ACNE Film to name a few.</p>
