--- a/investors/index.html
+++ b/investors/index.html
@@ -2,7 +2,7 @@
 <html class="staticrypt-html">
 		<head>
 				<meta charset="utf-8">
-				<title>VIP Login | Paradigm Group</title>
+				<title>IR Login | Paradigm Group</title>
 				<meta name="keywords" content="">
 				<meta name="description" content="">
 				<meta property="og:site_name" content="Paradigm">
@@ -112,7 +112,7 @@
 <div class="staticrypt-page">
     <div class="staticrypt-form">
         <div class="proj-info">
-            <h2 class="tag" style="text-align:left">Welcome to<br>Paradigm Group<br>Partnership<br>Login</h2>
+            <h2 class="tag" style="text-align:left">Welcome to<br>Paradigm Group<br>IR<br>Login</h2>
         </div>
 
         <hr class="staticrypt-hr" style="color: orange">
