--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -66,14 +66,14 @@
 						<li>FACTUAL</li>
 					</ul>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3 mobile">
 					<ul>
 						<li class="faded">Gastronomy</li>
 						<li class="faded">World Travel</li>
 						<li class="faded">Hospitality</li>
 					</ul>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3 mobile">
 						<ul>
 							<li class="faded">ENGLISH</li>
 							<li class="faded">45MIN EP</li>
