--- a/labeldrinkers/index.html
+++ b/labeldrinkers/index.html
@@ -175,11 +175,8 @@ Behind the cameras we have handpicked a team of sommelier world champions, decan
 			</div>
 			<div class="col-lg-5">
 				<div class="video">
-					<video playsinline autoplay muted loop>
-							<source src="../assets/videos/loops.mp4" type="video/mp4">
-							  <param name="allowFullScreen" value="false"/>
-							  <param name="allowscriptaccess" value="always"/>
-					</video>
+					<iframe src="https://player.vimeo.com/video/339710540" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
 				</div>
 			</div>
 		</div>
