--- a/v2/index.html
+++ b/v2/index.html
@@ -131,6 +131,7 @@
                                                         </div>
                                                     </div>                                    
                                                 </div>
+                                                <a class="showcase-link-project" data-type="page-transition" href="labeldrinkers/></a>
                                                 </div>
                                             <!--/Section Slide -->
                                             
